# Vision-Module

./: .gitignore  CMakeLists.txt  README.md  build.sh  openPython.sh  runExec.sh
ai_module/: CMakeLists.txt
ai_module/include/aimod/: aimod.hpp
ai_module/src/: aimod.cpp
api/: CMakeLists.txt
api/http_api/: CMakeLists.txt
api/http_api/include/httpapimod/: apimod.hpp
api_module/: CMakeLists.txt
api_module/include/apimod/: apimod.hpp  model.pb.h
api_module/include/zedmod/: zedmod.hpp
api_module/src/: apimod.cpp  apimod.hpp  model.pb.cc  model.proto  model_pb2.py  recieve.py
camera/: CMakeLists.txt
camera/zed/include/zedmod/: zedmod.hpp
camera/zed/src/: zedmod.cpp
executable_module/: CMakeLists.txt  config-example.json  main.cpp
http_api_module/: CMakeLists.txt
http_api_module/include/httpapimod/: apimod.hpp
http_api_module/src/: apimod.cpp
image-processing/: CMakeLists.txt
image-processing/darknet-module/: CMakeLists.txt
image-processing/darknet-module/include/darknetmod/: darknetmod.hpp
image-processing/darknet-module/src/: darknetmod.cpp
image-processing/mask-rcnn-module/: CMakeLists.txt
image-processing/mask-rcnn-module/include/maskrcnnmod/: maskrcnnmod.hpp
image-processing/mask-rcnn-module/src/: maskrcnnmod.cpp
image-processing/processing-pipeline/: CMakeLists.txt
image-processing/processing-pipeline/include/pipelinemod/: pipelinemod.hpp
image-processing/processing-pipeline/src/: pipelinemod.cpp
image-processing/visual-obj-module/: CMakeLists.txt
image-processing/visual-obj-module/include/visualobjmod/: visualobjmod.hpp
image-processing/visual-obj-module/src/: visualobjmod.cpp
image-processing/yolo-ai/: CMakeLists.txt
image-processing/yolo-ai/src/: yolomod.cpp
logger_module/: CMakeLists.txt
logger_module/include/loggermod/: loggermod.h  loggermod.hpp
logger_module/src/: loggermod.cpp
protobuf_api_module/: CMakeLists.txt
protobuf_api_module/include/protobufapimod/: apimod.hpp  model.pb.h
protobuf_api_module/src/: apimod.cpp  model.pb.cc
python-executable-api/: vision-api.py
socket_api_module/: CMakeLists.txt
socket_api_module/include/apimod/: apimod.hpp
socket_api_module/src/: apimod.cpp  installPybind11.sh
test/: CMakeLists.txt  ai_test.cpp  http_api_test.cpp  main_test.cpp  mask_rcnn_pipeline_test.cpp  pipeline_test.cpp  proto_api_test.cpp  tools.hpp  zed_test.cpp
test/test_zed/: CMakeLists.txt  test.cpp
tools/: opencvSetup
zed_module/: CMakeLists.txt
zed_module/include/apimod/: apimod.hpp
zed_module/include/zedmod/: zedmod.hpp
zed_module/src/: zedmod.cpp
